--- a/style.css
+++ b/style.css
@@ -82,11 +82,13 @@ nav ul li a:hover::after{
 .about-col-1 img{
    
     border-radius: 15px;
-    margin-left: 30px;
+    margin-left: 500px;
+    margin-top: -100px;
 
 }
 .about-col-2{
     flex-basis: 60%;
+    margin-left: 30px;
 
 }
 .sub-title{
@@ -350,4 +352,12 @@ nav .fa-solid{
     margin-left: 50px;
     display: block;
 }   
+.projects-list div{
+    margin-left: -50px;
+    margin-right: 30px;
+    padding: 30px 30px 30px 30px;
+}
 
+.about-col-2{
+    padding: 30px 30px 30px 10px;
+}
